<resources>
    <string name="app_name">Graduei</string>

    <string name="action_bar_title">GRADUEI</string>
    <string name="title_activity_main">GRADUEI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_menu">Menu</string>
    <string name="drawer_menu_account">Meus dados</string>
    <string name="drawer_menu_pictures">Galeria</string>
    <string name="drawer_menu_logout">Sair</string>

    <string name="facebook_app_id">1658435617819436</string>

    <string name="message_logout">Tem certeza que deseja sair?</string>
    <string name="yes_logout">Sim</string>
    <string name="no_logout">Não</string>

    <string name="activity_main_load_pictures">Carregar fotos</string>

    <string name="pref_first_launch_key">first-launch</string>
    <string name="careta">CARETA</string>
    <string name="perfil_direito">PERFIL DIREITO</string>
    <string name="frontal">FRONTAL</string>
    <string name="perfil_esquerdo">PERFIL ESQUERDO</string>
    <string name="drawer_menu_pictures_found">Fotos Encontradas</string>
    <string name="drawer_camera">Câmera</string>
    <string name="drawer_menu_careta">Careta</string>
    <string name="drawer_menu_frontal">Frontal</string>
    <string name="drawer_menu_direito">Perfil Direito</string>
    <string name="drawer_menu_esquerdo">Perfil Esquerdo</string>
    <string name="drawer_logout">Logout</string>
</resources>
