<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true" android:weightSum="100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:baselineAligned="true" android:weightSum="100"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_careta"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/careta"
                    android:gravity="center|top"/>

                <ImageView
                    android:id="@+id/careta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_perfil_direito"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/perfil_direito"
                    android:gravity="center|top"/>

                <ImageView
                    android:id="@+id/perfil_direito"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:baselineAligned="true" android:weightSum="100"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_frontal"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/frontal"
                    android:gravity="center|top"/>

                <ImageView
                    android:id="@+id/frontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_perfil_esquerdo"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/perfil_esquerdo"
                    android:gravity="center|top"/>

                <ImageView
                    android:id="@+id/perfil_esquerdo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
